--- a/.drone.yml
+++ b/.drone.yml
@@ -6,21 +6,23 @@ platform:
 steps:
   - name: amd64
     image: plugins/docker
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
-    repo: docker.io/jakolehm/cfssl
-    auto_tag_suffix: linux-amd64
+    settings:
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      repo: docker.io/jakolehm/cfssl
+      auto_tag_suffix: linux-amd64
   - name: arm64
     image: plugins/docker
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
-    repo: docker.io/jakolehm/cfssl
-    auto_tag_suffix: linux-arm64
-    build_args:
+    settings:
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      repo: docker.io/jakolehm/cfssl
+      auto_tag_suffix: linux-arm64
+      build_args:
       - ARCH=arm64
   - name: manifest
     image: plugins/manifest
